@@ -139,10 +139,9 @@ name|InterruptedException
 throws|,
 name|TimeoutException
 block|{
-name|updater
-operator|.
-name|update
-argument_list|(
+name|SolrZooKeeper
+name|zk
+init|=
 operator|new
 name|SolrZooKeeper
 argument_list|(
@@ -152,8 +151,41 @@ name|timeout
 argument_list|,
 name|watcher
 argument_list|)
+decl_stmt|;
+name|boolean
+name|success
+init|=
+literal|false
+decl_stmt|;
+try|try
+block|{
+name|updater
+operator|.
+name|update
+argument_list|(
+name|zk
 argument_list|)
 expr_stmt|;
+name|success
+operator|=
+literal|true
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+operator|!
+name|success
+condition|)
+block|{
+name|zk
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 annotation|@
 name|Override
@@ -188,12 +220,9 @@ argument_list|(
 literal|"Connection expired - starting a new one..."
 argument_list|)
 expr_stmt|;
-try|try
-block|{
-name|updater
-operator|.
-name|update
-argument_list|(
+name|SolrZooKeeper
+name|zk
+init|=
 operator|new
 name|SolrZooKeeper
 argument_list|(
@@ -203,7 +232,24 @@ name|zkClientTimeout
 argument_list|,
 name|watcher
 argument_list|)
+decl_stmt|;
+name|boolean
+name|success
+init|=
+literal|false
+decl_stmt|;
+try|try
+block|{
+name|updater
+operator|.
+name|update
+argument_list|(
+name|zk
 argument_list|)
+expr_stmt|;
+name|success
+operator|=
+literal|true
 expr_stmt|;
 name|log
 operator|.
@@ -237,6 +283,39 @@ argument_list|(
 literal|"Reconnect to ZooKeeper failed"
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+operator|!
+name|success
+condition|)
+block|{
+try|try
+block|{
+name|zk
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 block|}
