@@ -704,6 +704,37 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|keeper
+operator|!=
+literal|null
+condition|)
+block|{
+try|try
+block|{
+name|keeper
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e1
+parameter_list|)
+block|{
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 throw|throw
 operator|new
 name|RuntimeException
@@ -733,6 +764,29 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+try|try
+block|{
+name|keeper
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e1
+parameter_list|)
+block|{
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+block|}
 throw|throw
 operator|new
 name|RuntimeException
