@@ -34,9 +34,9 @@ begin_import
 import|import
 name|java
 operator|.
-name|util
+name|net
 operator|.
-name|HashSet
+name|MalformedURLException
 import|;
 end_import
 
@@ -56,16 +56,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|List
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|Map
 import|;
 end_import
@@ -76,7 +66,9 @@ name|java
 operator|.
 name|util
 operator|.
-name|Set
+name|concurrent
+operator|.
+name|TimeoutException
 import|;
 end_import
 
@@ -1207,6 +1199,66 @@ name|indexDoc
 argument_list|(
 name|doc
 argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testShutdown
+specifier|public
+name|void
+name|testShutdown
+parameter_list|()
+throws|throws
+name|MalformedURLException
+block|{
+name|CloudSolrServer
+name|server
+init|=
+operator|new
+name|CloudSolrServer
+argument_list|(
+literal|"[ff01::114]:33332"
+argument_list|)
+decl_stmt|;
+name|server
+operator|.
+name|setZkConnectTimeout
+argument_list|(
+literal|100
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|server
+operator|.
+name|connect
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Expected exception"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|RuntimeException
+name|e
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+name|e
+operator|.
+name|getCause
+argument_list|()
+operator|instanceof
+name|TimeoutException
+argument_list|)
+expr_stmt|;
+block|}
+name|server
+operator|.
+name|shutdown
+argument_list|()
 expr_stmt|;
 block|}
 block|}
